--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-# [Your Project Title]
+# [Lab Report 4 - Vim (Week 7)]
 
-## 1. Section One Title
+## 1. Log into ieng6
 Describe what this section is about.
 
 ![Image Description 1](image-url-1)
@@ -12,7 +12,7 @@ Describe what this section is about.
 ![Image Description 3](image-url-3)
 > Comment for Image 3
 
-## 2. Section Two Title
+## 2. Clone your fork of the repository from your Github account (using the SSH URL)
 Describe what this section is about.
 
 ![Image Description 1](image-url-1)
@@ -24,12 +24,45 @@ Describe what this section is about.
 ![Image Description 3](image-url-3)
 > Comment for Image 3
 
-## 3. Section Three Title
-...
+## 3. Run the tests, demonstrating that they fail
+Describe what this section is about.
+
+![Image Description 1](image-url-1)
+> Comment for Image 1
+
+![Image Description 2](image-url-2)
+> Comment for Image 2
+
+![Image Description 3](image-url-3)
+> Comment for Image 3
+
+## 4. Edit the code file to fix the failing test
+Describe what this section is about.
+
+![Image Description 1](image-url-1)
+> Comment for Image 1
+
+![Image Description 2](image-url-2)
+> Comment for Image 2
+
+![Image Description 3](image-url-3)
+> Comment for Image 3
+
+## 5. Run the tests, demonstrating that they now succeed
+Describe what this section is about.
+
+![Image Description 1](image-url-1)
+> Comment for Image 1
+
+![Image Description 2](image-url-2)
+> Comment for Image 2
+
+![Image Description 3](image-url-3)
+> Comment for Image 3
 
 (Continue the same structure for sections 4, 5, 6, and 7)
 
-## 7. Section Seven Title
+## 6. Commit and push the resulting change to your Github account (you can pick any commit message!)
 Describe what this section is about.
 
 ![Image Description 1](image-url-1)
